<resources>
    <string name="app_name">Habit Rabbit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="Habit_Period">Habit Period: </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_habit_list">Habits</string>
    <string name="title_habit_detail">Habit Detail</string>
    <string name="btn_tmp">tmp</string>
    <string name="event_in_the_day">you dont have any event in this day</string>
    <string name="btn_delete">delete</string>
    <string name="label_title">Title:</string>
    <string name="txt_title">My New Habit</string>
    <string name="label_description">Description:</string>
    <string name="txt_description">Description here.</string>
    <string name="label_freq">Repeat:</string>
    <string name="freq_prompt">choose a frequency:</string>
    <string name="label_reminder">Reminder:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>

    <string-array name="freq_array">
        <item>once a day</item>
        <item>once a week</item>
        <item>once a month</item>
    </string-array>
    <string-array name="period_array">
        <item>day</item>
        <item>week</item>
        <item>month</item>
    </string-array>
    <string name="title_activity_rabbit_review">RabbitReview</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_streak_graph">StreakGraph</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="note">NOTE:  \n\tThe Email must contain \'@\' symbol.\n\tThe password should\n\t
        * not be the same with your Email\n\t
        * be 8 – 16 characters long\n\t
        * contain at least 1 upper case\n\t
        * contain at least 1 lower case\n\t
        * contain at least 1 special case</string>
</resources>
