<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comjianzhaojohnhabit_rabbit.httpsgithub.habit_rabbit.AddHabitActivity">

    <ProgressBar
        android:id="@+id/add_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/new_habit_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="per"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_times"
            app:layout_constraintStart_toEndOf="@+id/editText_times" />

        <TextView
            android:id="@+id/textView_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/editText_description"
            android:text="@string/label_description"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_title" />

        <TextView
            android:id="@+id/textView_freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_freq"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_description" />

        <Button
            android:id="@+id/button_habit_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:text="@android:string/ok"
            android:textColor="?attr/colorButtonNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/txt_title"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/editText_times"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="1"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_freq" />

        <Switch
            android:id="@+id/switch_reminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_reminder"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_reminder"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_f" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/txt_description"
            android:inputType="textCapSentences|textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_des"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/spinner_f"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:entries="@array/period_array"
            android:prompt="@string/freq_prompt"
            android:spinnerMode="dialog"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_times"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/editText_title"
            android:text="@string/label_title"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_habit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@android:string/cancel"
            android:textColor="?attr/colorButtonNormal"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_habit_ok"
            app:layout_constraintEnd_toStartOf="@+id/button_habit_ok" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
